--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: 0% 60%;
-    justify-items: center;
+    text-align: center;
     color: #FFFFFF;
     font-weight: bold;
 }
@@ -28,10 +28,12 @@ h1 {
 ul {
     background-color: rgba(0, 0, 0, 0.5); /* dark overlay */
     color: #FFFFFF;
+    max-width: 600px;
+    margin: 0 auto;
     padding: 0.5rem;
     border-radius: 8px;
     font-size: 2rem;
-    list-style: none;
+    list-style:decimal;
     justify-items: center;
 }
 
